# AlgoHex

./: CMakeLists.txt  README.md  build.sh  run_evaluator.sh
.devcontainer/: devcontainer.json
cmake/: AlgoHexDependencies.cmake
demo/HexMeshing/: HexMeshing.cc  main.cc
demo/MeshabilityEvaluator/: CMakeLists.txt  MeshabilityEvaluator.cc  MeshabilityEvaluator.hh  find_weights.py  main.cc  predict.py  weight_explorer.py
docker/: Dockerfile-dev  docker_run.sh
src/AlgoHex/: Args.hh  FieldConstraintGenerator.hh  FrameFieldOptimizer3DT.hh  FrameFieldOptimizer3DT_impl.hh  SmoothOctahedralFieldGeneratorT.hh
src/AlgoHex/LocallyMeshableField/: LocalMeshabilityChecker.hh  LocalMeshabilityCheckerWithFrames.hh
